--- a/Carpenter.styles.css
+++ b/Carpenter.styles.css
@@ -127,7 +127,7 @@ float: left;
 }
 /* ---------- SMALL SCREEN STYLES ---------- */
 /* --------------- BEGIN SMALL SCREEN SIZES --------------- */
-/header, footer{
+header, footer{
 background-color: var(--lime-green);
 color: var(--dark-gray);
 }
@@ -152,7 +152,7 @@ max-width: 200px;
 /* --------------- END SMALL SCREEN SIZES --------------- */
 /* ---------- MEDIUM SCREEN STYLES ---------- */
 /* --------------- BEGIN MEDIUM SCREEN SIZES --------------- */
-/header, footer{
+header, footer{
 background-color: var(--black);
 color: var(--white);
 }
@@ -172,7 +172,7 @@ grid-row: 1/3;
 #seven{
 grid-column: 3/4;
 grid-row: 3/5;
-} */
+} 
 /* --------------- END MEDIUM SCREEN SIZES --------------- */
 /* ---------- LARGE SCREEN STYLES ---------- */
 /* --------------- BEGIN LARGE SCREEN SIZES --------------- */
@@ -204,14 +204,14 @@ grid-row: 3/4;
 /* --------------- END LARGE SCREEN SIZES --------------- */
 /* ---------- ADJUSTING RESPONSIVE IMAGE SIZE ---------- */
 /* --------------- BEGIN RESPONSIVE IMAGE ADJUST SIZES --------------- */
-/* img{
+img{
 width: 300px;
 max-width: 300px;
-} */
+} 
 /* --------------- END RESPONSIVE IMAGE ADJUST SIZES --------------- */
 /* ---------- EXTRA LARGE SCREEN STYLES ---------- */
 /* --------------- BEGIN EXTRA LARGE SCREEN SIZES --------------- */
-/* header, footer{
+header, footer{
 background-color: var(--orange);
 padding-left: 5%;
 }
@@ -261,5 +261,5 @@ grid-column: 8/12;
 }
 #three p, #four p, #five p, #six p{
 padding-top: 2em;
-} */
+} 
 /* --------------- END EXTRA LARGE SCREEN SIZES --------------- */
