--- a/Carpenter.styles.css
+++ b/Carpenter.styles.css
@@ -26,6 +26,9 @@
 box-sizing: border-box;
 line-height: 1.35;
 }
+
+
+
 /* ----- CHECK FOR USER DARK MODE PREFERENCE ----- */
 /* --------------- BEGIN USER PREFERS DARK COLOR SCHEME QUERY --------------- */
 /* CHANGE THE BODY'S BACKGROUND COLOR TO THE DARK GRAY IF THE USER PREFERS DARK
@@ -37,6 +40,11 @@ MODE */
   }
 }
 /* --------------- END USER PREFERS DARK COLOR SCHEME QUERY --------------- */
+
+
+
+
+
 /* ----- HEADINGS ----- */
 h1, h2, h3, h4{
 font-weight: bold;
@@ -56,6 +64,10 @@ display: block;
 max-width: 100%;
 margin: 0.5em 0;
 }
+
+
+
+
 /* ----- ANIMATED ICON ----- */
 /* Icon and animation code from https://typogram.github.io/Anicons/ */
 .icon{
@@ -80,13 +92,21 @@ font-size: 1em;
 }
 /* ----- HANDLE PREFERS REDUCED MOTION FOR THE ICON ANIMATIONS ----- */
 /* --------------- BEGIN USER PREFERS REDUCED MOTION QUERY --------------- */
-@-webkit-keyframes icon-animation {
-0% { font-variation-settings: "TIME" 1; }
+@media (prefers-reduced-motion: reduce){
+.icon{
+animation: none;
+-webkit-animation: none;
+  }
 }
-@keyframes icon-animation {
-0% { font-variation-settings: "TIME" 1; }
-}
+
 /* --------------- END USER PREFERS REDUCED MOTION QUERY --------------- */
+
+
+
+
+
+
+
 /* ----- TEXT ----- */
 p, small{
 font-size: 1em;
@@ -111,7 +131,10 @@ section{
 margin: 1em 0;
 padding: 1em;
 }
+
+
 /* ---------- EXTRA SMALL SCREEN STYLES ---------- */
+@media screen and (max-width: 479px){
 header, footer{
 background-color: var(--pink);
 color: var(--white);
@@ -124,9 +147,17 @@ img{
 margin: 0.75em 0.75em 0.75em 0;
 display: inline;
 float: left;
+  }
 }
+
+
+
+
+
+
 /* ---------- SMALL SCREEN STYLES ---------- */
 /* --------------- BEGIN SMALL SCREEN SIZES --------------- */
+@media screen and (min-width: 620px) and (max-width: 899px){
 header, footer{
 background-color: var(--lime-green);
 color: var(--dark-gray);
@@ -137,6 +168,7 @@ grid-gap: 0.75em;
 grid-template-columns: 1fr 1fr;
 margin: 1em 0;
 }
+
 section{
 background-color: var(--yellow);
 color: var(--dark-gray);
@@ -148,10 +180,18 @@ grid-column: 1/3;
 img{
 width: 200px;
 max-width: 200px;
-} */
+  } 
+}
 /* --------------- END SMALL SCREEN SIZES --------------- */
+
+
+
+
+
+
 /* ---------- MEDIUM SCREEN STYLES ---------- */
 /* --------------- BEGIN MEDIUM SCREEN SIZES --------------- */
+@media screen and (min-width: 900px) and (max-width: 1279px){
 header, footer{
 background-color: var(--black);
 color: var(--white);
@@ -172,10 +212,18 @@ grid-row: 1/3;
 #seven{
 grid-column: 3/4;
 grid-row: 3/5;
-} 
+  } 
+}
 /* --------------- END MEDIUM SCREEN SIZES --------------- */
+
+
+
+
+
+
 /* ---------- LARGE SCREEN STYLES ---------- */
 /* --------------- BEGIN LARGE SCREEN SIZES --------------- */
+@media screen and (min-width: 1280px) and (max-width: 1439px){
 header, footer{
 background-color: var(--lime-green);
 color: var(--dark-gray);
@@ -200,17 +248,29 @@ grid-column: 3/5;
 }
 #seven, #eight{
 grid-row: 3/4;
-} */
+  } 
+}
 /* --------------- END LARGE SCREEN SIZES --------------- */
+
+
+
+
+
 /* ---------- ADJUSTING RESPONSIVE IMAGE SIZE ---------- */
 /* --------------- BEGIN RESPONSIVE IMAGE ADJUST SIZES --------------- */
+@media screen and (min-width: 1280px){
 img{
 width: 300px;
 max-width: 300px;
-} 
+  } 
+}
 /* --------------- END RESPONSIVE IMAGE ADJUST SIZES --------------- */
+
+
+
 /* ---------- EXTRA LARGE SCREEN STYLES ---------- */
 /* --------------- BEGIN EXTRA LARGE SCREEN SIZES --------------- */
+@media screen and (min-width: 1600px) {
 header, footer{
 background-color: var(--orange);
 padding-left: 5%;
@@ -261,5 +321,9 @@ grid-column: 8/12;
 }
 #three p, #four p, #five p, #six p{
 padding-top: 2em;
-} 
+  } 
+}
+
 /* --------------- END EXTRA LARGE SCREEN SIZES --------------- */
+
+
